<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/dimen_15dp">



    <TextView
        android:id="@+id/booking_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/booking_details"
        android:layout_marginBottom="@dimen/dimen_10dp"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textSize="@dimen/dimen_20sp"/>

    <LinearLayout
        android:id="@+id/booking_data"
        android:layout_below="@+id/booking_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/dimen_4dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/booking_id"
                android:layout_alignParentStart="true"
                android:textStyle="bold"/>


            <TextView
                android:id="@+id/booking_id"
                android:text="@string/value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/dimen_4dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/port"
                android:layout_alignParentStart="true"
                android:textStyle="bold"/>


            <TextView
                android:id="@+id/port_name"
                android:text="@string/value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/dimen_4dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zone"
                android:layout_alignParentStart="true"
                android:textStyle="bold"/>


            <TextView
                android:id="@+id/zone_name"
                android:text="@string/value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/dimen_4dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quantity_booked"
                android:layout_alignParentStart="true"
                android:textStyle="bold"/>


            <TextView
                android:id="@+id/quantity"
                android:text="@string/value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/dimen_4dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_of_booking"
                android:layout_alignParentStart="true"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/time"
                android:text="@string/value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/dimen_4dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/booking_process"
                android:layout_alignParentStart="true"
                android:textStyle="bold"/>


            <TextView
                android:id="@+id/status"
                android:text="@string/value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/dimen_4dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status"
                android:layout_alignParentStart="true"
                android:textStyle="bold"/>


            <TextView
                android:id="@+id/booking_method"
                android:text="@string/value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"/>
        </RelativeLayout>


    </LinearLayout>

    <Button
        android:id="@+id/ok_btn"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:layout_width="@dimen/dimen_50dp"
        android:layout_height="@dimen/dimen_30dp"
        android:text="@string/ok"
        android:layout_below="@+id/booking_data"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_red_bg"/>





</RelativeLayout>