<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CustomerHome"
    android:fillViewport="true">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="#fef6af"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:layout_weight="0.2"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/portinfo_logo"
                android:layout_marginBottom="24dp"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/lightBrown"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="0.8"
            android:weightSum="1"
            android:gravity="center">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.4"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:gravity="center">

                <Button
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:text="@string/sand_booking"
                    android:id="@+id/sand_booking_btn"
                    android:background="@drawable/customer_options_btn"
                    android:layout_alignParentStart="true" />

                <Button
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:text="@string/booking_status"
                    android:id="@+id/booking_status_btn"
                    android:background="@drawable/customer_options_btn"
                    android:layout_alignParentEnd="true"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.4"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:gravity="center">

                <Button
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:text="@string/booking_history"
                    android:id="@+id/booking_history_btn"
                    android:background="@drawable/customer_options_btn"
                    android:layout_alignParentStart="true"/>

                <Button
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:text="@string/complete_payment"
                    android:id="@+id/complete_payment_btn"
                    android:background="@drawable/customer_options_btn"
                    android:layout_alignParentEnd="true"/>

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/lightBrown"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical"
                android:layout_weight="0.2"
                android:gravity="center">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/spot_booking"
                    android:id="@+id/spot_booking_btn"
                    android:background="@drawable/button_red_bg"
                    android:layout_marginTop="16dp" />
            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

</ScrollView>

